--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django==3.2.25
-djangorestframework==3.15.2
-gunicorn==22.0.0
+psycopg2>=2.8
 psycopg2-binary==2.9.1
+djangorestframework==3.12.4
+gunicorn==22.0.0
+asgiref<4,>=3.3.2
+pytz
+sqlparse>=0.2.2
